--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     height: 100vh;
     justify-content: center;
     background: url("https://images.unsplash.com/photo-1444080748397-f442aa95c3e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80");
-
+    background-size: cover;
+    overflow: hidden;
 }
 
 h2 {
@@ -15,6 +16,7 @@ h2 {
     letter-spacing: 4px;
     font-size: 14px;
     text-align: center;
+    color: white;
 }
 
 .clock {
@@ -24,6 +26,7 @@ h2 {
 
 .clock div {
     margin: 5px;
+    position: relative;
 }
 
 .clock span {
@@ -37,5 +40,22 @@ h2 {
     align-items: center;
     font-size: 50px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-    
+}
+
+.clock .text {
+    height: 30px;
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-color: darkblue;
+    opacity: .8;
+}
+
+.clock #ampm {
+    bottom: 0;
+    position: absolute;
+    width: 60px;
+    height: 30px;
+    font-size: 20px;
+    background: green;
 }
